# games-with-c

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  doc.md  doc.txt  main.c  run.sh
chess/include/: pieces.h
include/: game.h  gui.h  move.h  output.h
minesweeper/: CMakeLists.txt
minesweeper/include/: debug.h  game.h  gui.h
minesweeper/src/: debug.c  gui.c  gui.css  main.c
src/: game.c  gui.c  gui.css  main.c  move.c  output.c  utils.c
